--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-redux": "^7.1.5",
+    "@types/redux": "^3.6.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "typescript": "3.7.2"
   },
   "scripts": {
