--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/redux": "^3.6.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "reset-css": "^5.0.1",
     "typescript": "3.7.2"
   },
   "scripts": {
